feat: created brands controller
